--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1350,38 +1350,59 @@ section.lazy-placeholder:after {
 .cid-skBctvymid .slider .mbr-text {
   text-align: center;
 }
-.cid-skBcA4vg6U {
-  padding-top: 60px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-taTgkMBRzO {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #fafafa;
 }
-.cid-skBcA4vg6U .item img {
+.cid-taTgkMBRzO .content-wrapper {
+  max-width: 750px;
+  margin: auto;
+  position: relative;
+}
+@media (max-width: 1200px) {
+  .cid-taTgkMBRzO .img-col img:last-child {
+    width: 500px;
+  }
+}
+@media (max-width: 992px) {
+  .cid-taTgkMBRzO .content-wrapper {
+    padding-bottom: 1.5rem;
+  }
+  .cid-taTgkMBRzO .img-col img {
+    right: 0 !important;
+  }
+}
+@media (max-width: 767px) {
+  .cid-taTgkMBRzO .img-col img {
+    right: 0 !important;
+  }
+  .cid-taTgkMBRzO .img-col img:last-child {
+    display: none !important;
+  }
+}
+.cid-taTgkMBRzO .img-col {
+  position: relative;
+}
+.cid-taTgkMBRzO .img-col img {
   width: 100%;
+  max-width: 540px;
+  position: relative;
+  padding: 0 10px;
   z-index: 1;
 }
-.cid-skBcA4vg6U .item .card {
-  margin-left: 20%;
-  background-color: #ffffff;
-  padding: 2rem;
-  position: relative;
-  margin-top: -2rem;
+.cid-taTgkMBRzO .img-col img:last-child {
+  position: absolute;
+  width: 50%;
   z-index: 2;
-  border-radius: 0;
-}
-.cid-skBcA4vg6U .item-wrapper {
-  padding-bottom: 2rem;
-}
-.cid-skBcA4vg6U .card .mbr-text,
-.cid-skBcA4vg6U .card .mbr-section-title {
-  margin-bottom: 10px;
-}
-.cid-skBcA4vg6U .mbr-text {
-  color: #777777;
+  bottom: -40px;
+  right: -10px;
+  left: auto;
 }
 .cid-tatx11XJAQ {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #eaeff1;
+  background-color: #ffffff;
 }
 .cid-tatx11XJAQ .row {
   justify-content: center;
@@ -1502,7 +1523,7 @@ section.lazy-placeholder:after {
 .cid-tas9qT90mI {
   padding-top: 3rem;
   padding-bottom: 4rem;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 .cid-tas9qT90mI .item-wrapper {
   width: 100%;
